messy ui, fixed be

--- a/admin.html
+++ b/admin.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Admin - Hostel Poster Store</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
   </head>
-  <body>
-    <!-- Login Screen -->
+  <body class="theme-dark">
     <div id="login-screen" class="login-screen">
       <div class="login-container">
         <h1>Admin Access</h1>
@@ -21,11 +20,7 @@
               required
             />
           </div>
-          <div
-            id="auth-error"
-            class="error-message"
-            style="display: none"
-          ></div>
+          <div id="auth-error" class="error-message" style="display: none"></div>
           <button type="submit" class="btn btn-primary btn-full">Login</button>
         </form>
         <div class="back-link">
@@ -34,9 +29,7 @@
       </div>
     </div>
 
-    <!-- Admin Dashboard -->
     <div id="admin-dashboard" class="admin-dashboard" style="display: none">
-      <!-- Header -->
       <header class="header">
         <div class="container">
           <div class="header-content">
@@ -52,11 +45,9 @@
         </div>
       </header>
 
-      <!-- Main Content -->
       <main class="main">
         <div class="container">
           <div class="admin-grid">
-            <!-- Add New Poster Form -->
             <div class="admin-section">
               <h2>Add New Poster</h2>
               <div class="form-container">
@@ -74,37 +65,20 @@
 
                   <div class="form-group">
                     <label for="poster-image">Image</label>
-                    
-                    <!-- Image option selector -->
                     <div class="image-option-selector">
                       <label class="radio-label">
-                        <input type="radio" id="upload-option" name="image-option" value="upload" checked>
+                        <input type="radio" id="upload-option" name="image-option" value="upload" checked />
                         <span>Upload Image File</span>
                       </label>
                       <label class="radio-label">
-                        <input type="radio" id="url-option" name="image-option" value="url">
+                        <input type="radio" id="url-option" name="image-option" value="url" />
                         <span>Use Image URL</span>
                       </label>
                     </div>
 
-                    <!-- File upload input -->
-                    <input
-                      type="file"
-                      id="poster-image-file"
-                      accept="image/*"
-                      class="file-input"
-                    />
-                    
-                    <!-- URL input -->
-                    <input
-                      type="url"
-                      id="poster-image-url"
-                      placeholder="https://example.com/poster.jpg"
-                      class="url-input"
-                      disabled
-                    />
+                    <input type="file" id="poster-image-file" accept="image/*" class="file-input" />
+                    <input type="url" id="poster-image-url" placeholder="https://example.com/poster.jpg" class="url-input" disabled />
 
-                    <!-- Image preview -->
                     <div id="image-preview" class="image-preview" style="display: none;">
                       <img id="preview-img" alt="Preview" />
                       <small>Image Preview</small>
@@ -117,26 +91,12 @@
 
                   <div class="form-group">
                     <label for="poster-quantity">Quantity *</label>
-                    <input
-                      type="number"
-                      id="poster-quantity"
-                      min="0"
-                      max="1000"
-                      value="1"
-                      required
-                    />
+                    <input type="number" id="poster-quantity" min="0" max="1000" value="1" required />
                   </div>
 
                   <div class="form-group">
                     <label for="poster-price">Price (₹) *</label>
-                    <input
-                      type="number"
-                      id="poster-price"
-                      min="0"
-                      step="0.01"
-                      value="0.00"
-                      required
-                    />
+                    <input type="number" id="poster-price" min="0" step="0.01" value="0.00" required />
                   </div>
 
                   <div class="form-group checkbox-group">
@@ -151,28 +111,17 @@
                     <span id="submit-text">Add Poster</span>
                   </button>
 
-                  <div
-                    id="form-message"
-                    class="form-message"
-                    style="display: none"
-                  ></div>
+                  <div id="form-message" class="form-message" style="display: none"></div>
                 </form>
               </div>
             </div>
 
-            <!-- Current Posters List -->
             <div class="admin-section">
               <h2>Current Posters</h2>
               <div class="poster-list-container">
-                <div id="admin-loading" class="loading-small">
-                  Loading posters...
-                </div>
-                <div id="admin-empty" class="empty-small" style="display: none">
-                  No posters added yet
-                </div>
-                <div id="poster-list" class="poster-list" style="display: none">
-                  <!-- Poster list items will be inserted here -->
-                </div>
+                <div id="admin-loading" class="loading-small">Loading posters...</div>
+                <div id="admin-empty" class="empty-small" style="display: none">No posters added yet</div>
+                <div id="poster-list" class="poster-list" style="display: none"></div>
               </div>
             </div>
           </div>
@@ -180,20 +129,13 @@
       </main>
     </div>
 
-    <script src="supabase.js"></script>
-    <script src="admin.js"></script>
-  </body>
-</html>
-                  No posters added yet
-                </div>
-                <div id="poster-list" class="poster-list" style="display: none">
-                  <!-- Poster list items will be inserted here -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
+    <div id="image-lightbox" class="lightbox" aria-modal="true" role="dialog" aria-hidden="true">
+      <div class="lightbox-backdrop" data-lightbox-close></div>
+      <div class="lightbox-body" role="document">
+        <button class="lightbox-close" aria-label="Close image" title="Close" data-lightbox-close>×</button>
+        <img id="lightbox-img" alt="" />
+        <div id="lightbox-caption" class="lightbox-caption"></div>
+      </div>
     </div>
 
     <script src="supabase.js"></script>
