--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hostel Poster Store - Premium Minimalistic Posters</title>
+    <title>PosterHub</title>
     <meta
       name="description"
       content="Discover beautiful minimalistic posters for your hostel room. High-quality designs at affordable prices."
@@ -17,11 +17,14 @@
       <div class="container">
         <div class="header-content">
           <div class="header-text">
-            <h1>Hostel Poster Store</h1>
-            <p>Transform your space with premium minimalistic posters</p>
+            <h1>PosterHub</h1>
+            <p>
+              <strong>Special Offers:</strong> Buy 6 posters, get 1 free &bull; Buy 10 posters, get 2 free.<br>
+              <span style="font-size: 0.95em;">Scroll down for contact information.</span>
+            </p>
           </div>
           <div class="header-actions">
-            <a href="admin.html" class="btn btn-secondary">
+            <!-- <a href="admin.html" class="btn btn-secondary">
               <svg
                 width="16"
                 height="16"
@@ -33,7 +36,7 @@
                   d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"
                 />
               </svg>
-              Admin Portal
+               -->
             </a>
           </div>
         </div>
